Pushing v181 from API f350422024d3e9e0a7a2381eab7a72b672d7596d

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -5358,6 +5358,25 @@ paths:
                     When viewing a member with `access_level = 'limited'`, the value of
                     `enrollment_status` will be `redacted`. This is not valid as an input.
                   example: enrolled
+                external_identifiers:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      integration:
+                        type: string
+                        example: int_CoI0pt2LSWjGOTWRLZeT
+                      external_id:
+                        type: string
+                        description: The unique identifier of the member in the integrated system.
+                        example: ext_ybNXqZDkat6pJ7d39Zx9
+                    required:
+                      - integration
+                      - external_id
+                  description:
+                    An array of external identifiers for the member. Each identifier is associated
+                    with a particular external integration. The member's external identifier must be
+                    unique for a given integration.
               required:
                 - first_name
                 - last_name
@@ -5874,6 +5893,25 @@ paths:
                     When viewing a member with `access_level = 'limited'`, the value of
                     `enrollment_status` will be `redacted`. This is not valid as an input.
                   example: enrolled
+                external_identifiers:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      integration:
+                        type: string
+                        example: int_CoI0pt2LSWjGOTWRLZeT
+                      external_id:
+                        type: string
+                        description: The unique identifier of the member in the integrated system.
+                        example: ext_ybNXqZDkat6pJ7d39Zx9
+                    required:
+                      - integration
+                      - external_id
+                  description:
+                    An array of external identifiers for the member. Each identifier is associated
+                    with a particular external integration. The member's external identifier must be
+                    unique for a given integration.
       responses:
         default:
           description: Successful response.
@@ -12235,6 +12273,85 @@ components:
         leverage these groups when routing tasks or viewing schedule availability.
       x-resourceId: group
       x-package: null
+    integration:
+      type: object
+      properties:
+        object:
+          type: string
+          default: integration
+          enum:
+            - integration
+          example: integration
+          description: Always `integration`.
+        id:
+          type: string
+        user:
+          oneOf:
+            - type: string
+            - $ref: "#/components/schemas/user"
+          x-expandable:
+            $ref: "#/components/schemas/user"
+          description: Expandable reference to a User
+          example: usr_NC6MQ3FyxddKoJJpfSVL
+          nullable: true
+        type:
+          type: string
+          enum:
+            - cronofy
+            - canvas
+        enabled:
+          type: boolean
+        config:
+          type: object
+          properties:
+            type:
+              type: string
+              default: canvas
+              enum:
+                - canvas
+              example: canvas
+            api_base_url:
+              type: string
+              description: The URL of the Canvas instance FHIR API to connect to.
+              example: https://fhir-subdomain.canvas.com
+            web_base_url:
+              type: string
+              description: The URL of the Canvas instance web application to connect to.
+              example: https://subdomain.canvas.com
+          required:
+            - type
+            - api_base_url
+            - web_base_url
+          nullable: true
+        external_id:
+          type: string
+          nullable: true
+          description: The corresponding ID of this integration in the external system.
+          example: null
+        created_at:
+          type: string
+          format: date-time
+          description: Timestamp of when the integration was created.
+          example: 2021-05-13T16:33:00.000Z
+        updated_at:
+          type: string
+          format: date-time
+          description: Timestamp of when the integration was last updated.
+          example: 2021-05-13T16:33:00.000Z
+      required:
+        - object
+        - id
+        - user
+        - type
+        - enabled
+        - config
+        - external_id
+        - created_at
+        - updated_at
+      title: Integration
+      description: This resource represents an integration (such as Google Calendar)
+      x-resourceId: integration
+      x-package: null
     license:
       type: object
       properties:
@@ -12780,6 +12897,30 @@ components:
             who can see another caregiver participating in message threads for a member they are
             both related to, even when the caregivers are not directly related."
           example: full
+        external_identifiers:
+          type: array
+          items:
+            type: object
+            properties:
+              integration:
+                oneOf:
+                  - type: string
+                  - $ref: "#/components/schemas/integration"
+                x-expandable:
+                  $ref: "#/components/schemas/integration"
+                description: Expandable reference to an Integration
+                example: int_CoI0pt2LSWjGOTWRLZeT
+              external_id:
+                type: string
+                description: The unique identifier of the member in the integrated system.
+                example: ext_ybNXqZDkat6pJ7d39Zx9
+            required:
+              - integration
+              - external_id
+          description:
+            An array of external identifiers for the member. Each identifier is associated with a
+            particular external integration. The member's external identifier must be unique for a
+            given integration.
         created_at:
           type: string
           format: date-time
@@ -12813,6 +12954,7 @@ components:
         - tags
         - enrollment_status
         - access_level
+        - external_identifiers
         - created_at
         - updated_at
       title: Member
