--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -5969,6 +5969,29 @@ paths:
                   type: string
                   minLength: 1
                   description: Contents of the message to send.
+                channel:
+                  type: string
+                  example: chan_wrsKSJ6PBE52n06UDyxV
+                  nullable: true
+                  description:
+                    The channel over which the message will be sent. If a channel is specified, you
+                    must also specify the contact point in the `to` field. For example, to send a
+                    message via SMS, provide the ID of a channel of type 'sms' and specify the
+                    member's contact point in the `to` field. If no channel is provided, the message
+                    will be sent as an in-app message.
+                to:
+                  oneOf:
+                    - $ref: "#/components/schemas/contact_point"
+                  nullable: true
+                  description:
+                    Contact point to which the message will be sent. For messages sent to a member
+                    or caregiver, this value is the contact point of the member or caregiver (for
+                    example, the member's phone number). The contact point provided must be
+                    supported by the channel you specify. If you provide this contact point but no
+                    channel, this contact point is ignored.
+                  example:
+                    system: phone
+                    value: "12125556789"
                 thread_actions:
                   type: object
                   properties:
@@ -6003,6 +6026,7 @@ paths:
                           `file` and `link`. If set to file, then a resource must be provided. If
                           set to link, then a URL must be provided. Other attachment types may be
                           added in the future.
+                        example: file
                       description:
                         type: string
                         maxLength: 4096
@@ -6017,6 +6041,7 @@ paths:
                         description:
                           Unique ID of the resource to be attached to this message. When attaching a
                           file, this should be set to the uploaded file's ID.
+                        example: file_gdIyXM9d4LKGnewOV4OM
                       url:
                         type: string
                         description:
@@ -8829,6 +8854,29 @@ paths:
                       type: string
                       minLength: 1
                       description: Contents of the message to send.
+                    channel:
+                      type: string
+                      example: chan_wrsKSJ6PBE52n06UDyxV
+                      nullable: true
+                      description:
+                        The channel over which the message will be sent. If a channel is specified,
+                        you must also specify the contact point in the `to` field. For example, to
+                        send a message via SMS, provide the ID of a channel of type 'sms' and
+                        specify the member's contact point in the `to` field. If no channel is
+                        provided, the message will be sent as an in-app message.
+                    to:
+                      oneOf:
+                        - $ref: "#/components/schemas/contact_point"
+                      nullable: true
+                      description:
+                        Contact point to which the message will be sent. For messages sent to a
+                        member or caregiver, this value is the contact point of the member or
+                        caregiver (for example, the member's phone number). The contact point
+                        provided must be supported by the channel you specify. If you provide this
+                        contact point but no channel, this contact point is ignored.
+                      example:
+                        system: phone
+                        value: "12125556789"
                     thread_actions:
                       type: object
                       properties:
@@ -8864,6 +8912,7 @@ paths:
                               `file` and `link`. If set to file, then a resource must be provided.
                               If set to link, then a URL must be provided. Other attachment types
                               may be added in the future.
+                            example: file
                           description:
                             type: string
                             maxLength: 4096
@@ -8878,6 +8927,7 @@ paths:
                             description:
                               Unique ID of the resource to be attached to this message. When
                               attaching a file, this should be set to the uploaded file's ID.
+                            example: file_gdIyXM9d4LKGnewOV4OM
                           url:
                             type: string
                             description:
@@ -10957,6 +11007,88 @@ components:
         team to determine how they're routed.
       x-resourceId: care_team
       x-package: null
+    channel:
+      type: object
+      properties:
+        object:
+          type: string
+          default: channel
+          enum:
+            - channel
+          example: channel
+          description: Always `channel`.
+        id:
+          type: string
+          description: Unique ID of the channel.
+          example: chan_wrsKSJ6PBE52n06UDyxV
+        type:
+          type: string
+          description: The type of channel.
+          example: sms
+        name:
+          type: string
+          description: The name of this channel.
+          example: SMS Line
+        contact:
+          oneOf:
+            - $ref: "#/components/schemas/contact_point"
+          x-wrapped: true
+          description:
+            The contact point that represents the handle from which this channel communicates.
+          example:
+            system: phone
+            value: "+12125551234"
+        capabilities:
+          type: object
+          properties:
+            attachment_types:
+              type: array
+              items:
+                type: string
+            rich_text:
+              type: boolean
+            max_length:
+              type: number
+              nullable: true
+          required:
+            - attachment_types
+            - rich_text
+            - max_length
+          description: The capabilities of this channel.
+        created_at:
+          type: string
+          format: date-time
+          description: Timestamp of when the channel was created.
+          example: 2021-05-13T16:33:00.000Z
+        updated_at:
+          type: string
+          format: date-time
+          description: Timestamp of when the channel was last updated.
+          example: 2021-05-13T16:33:00.000Z
+        deleted_at:
+          type: string
+          format: date-time
+          description: Timestamp of when the channel was deleted.
+      required:
+        - object
+        - id
+        - type
+        - name
+        - contact
+        - capabilities
+        - created_at
+        - updated_at
+      title: Channel
+      description: >-
+        Channels represent the ways that you can communicate with your members, such as SMS or live
+        chat.
+
+
+        You can create and manage channels to support new ways of connecting with your members.
+        Typically, most accounts will only use a small number of channels. However, more advanced
+        use cases may want to create unique channels per location or service line, for example.
+      x-resourceId: channel
+      x-package: communications
     comment:
       type: object
       properties:
@@ -11143,6 +11275,27 @@ components:
         - $ref: "#/components/schemas/CompoundConditional"
       discriminator:
         propertyName: type
+    contact_point:
+      type: object
+      properties:
+        system:
+          type: string
+          enum:
+            - phone
+            - email
+            - other
+          description: The system that this contact point represents.
+          example: phone
+        value:
+          type: string
+          description:
+            The details of the actual contact point, such as the phone number or email address.
+            While this value is always a string, the specific syntax will be determined based on the
+            system.
+          example: "+12125551234"
+      required:
+        - system
+        - value
     device:
       type: object
       properties:
@@ -12998,6 +13151,48 @@ components:
             $ref: "#/components/schemas/thread"
           description: Thread to which the message belongs.
           example: thrd_7BqeKrhbVU7c4Cigqs60
+        channel:
+          oneOf:
+            - type: string
+            - $ref: "#/components/schemas/channel"
+          x-expandable:
+            $ref: "#/components/schemas/channel"
+          description:
+            The channel over which the message was sent. For messages sent via Source's in-app chat
+            feature, the channel is null.
+          example: chan_wrsKSJ6PBE52n06UDyxV
+          nullable: true
+        channel_type:
+          type: string
+          description:
+            The type of channel. Currently, Source supports chat (in-app messaging) and sms channel
+            types.
+          example: sms
+        from:
+          oneOf:
+            - $ref: "#/components/schemas/contact_point"
+          nullable: true
+          description:
+            Contact point from which the message was sent. For inbound messages from a member or
+            caregiver, this value is the contact point they used (for example, the member's phone
+            number). For outbound messages from the care team, this value is the channel's contact
+            point (for example, the practice's provisioned phone number).
+          example:
+            system: phone
+            value: "12125551234"
+        to:
+          oneOf:
+            - $ref: "#/components/schemas/contact_point"
+          nullable: true
+          description:
+            Contact point to which the message was sent. For inbound messages from a member or
+            caregiver, this value is the channel's contact point (for example, the practice's
+            provisioned phone number). For outbound messages sent to a member or caregiver, this
+            value is the contact point of the member or caregiver (for example, the member's phone
+            number).
+          example:
+            system: phone
+            value: "12125556789"
         text:
           type: string
           description: Plain text contents of the message.
@@ -13025,10 +13220,34 @@ components:
               description: Expandable reference to an Api Key
               example: key_XRJbHlfuCKSZQ1T2U0ax
           description: The person or api key who sent this message.
+        status:
+          type: string
+          enum:
+            - pending
+            - sent
+            - failed
+          description:
+            The current status of the message. For messages sent via Source's in-app chat feature,
+            messages go directly to the 'sent' status. For all other channels, the message is
+            created in a 'pending' status and then transitions to the 'sent' status upon successful
+            sending, or the 'failed' status if an error occurs.
+          example: sent
         sent_at:
           type: string
           format: date-time
           description: The time at which this message was sent.
+          example: 2021-05-13T16:33:00.000Z
+        direction:
+          type: string
+          enum:
+            - inbound
+            - outbound
+          description:
+            Inbound or outbound from the perspective of the care team. All messages sent by members
+            have an inbound direction. This field can be useful when displaying a thread in a member
+            experience, with messages from the care team on one side of the display and messages
+            from the member on the opposite side.
+          example: outbound
         attachments:
           type: array
           items:
@@ -13092,6 +13311,7 @@ components:
           description:
             The API key who created the message on behalf of `sender`. If null, the message sender
             was not impersonated.
+          example: null
         redacted_at:
           type: string
           format: date-time
@@ -13103,9 +13323,15 @@ components:
         - id
         - type
         - thread
+        - channel
+        - channel_type
+        - from
+        - to
         - text
         - sender
+        - status
         - sent_at
+        - direction
         - attachments
         - impersonated_by
         - redacted_at
@@ -14893,6 +15119,32 @@ components:
             $ref: "#/components/schemas/member"
           description: The member to which this thread belongs.
           example: mem_JAfPRRc59eh2YQ1aeL3D
+        channel:
+          oneOf:
+            - type: string
+            - $ref: "#/components/schemas/channel"
+          x-expandable:
+            $ref: "#/components/schemas/channel"
+          description:
+            The channel used for this thread. For threads using Source's in-app chat feature, the
+            channel is null.
+          example: chan_wrsKSJ6PBE52n06UDyxV
+          nullable: true
+        channel_type:
+          type: string
+          description:
+            The type of channel. Currently, Source supports chat (in-app messaging) and sms channel
+            types.
+          example: sms
+        last_remote_contact_point:
+          oneOf:
+            - $ref: "#/components/schemas/contact_point"
+          nullable: true
+          description:
+            Contact point from which the last message was sent from a member or caregiver.
+          example:
+            system: phone
+            value: "12125556789"
         assignee:
           oneOf:
             - type: string
@@ -14916,6 +15168,48 @@ components:
         last_message:
           type: object
           properties:
+            channel:
+              oneOf:
+                - type: string
+                - $ref: "#/components/schemas/channel"
+              x-expandable:
+                $ref: "#/components/schemas/channel"
+              description:
+                The channel over which the message was sent. For messages sent via Source's in-app
+                chat feature, the channel is null.
+              example: chan_wrsKSJ6PBE52n06UDyxV
+              nullable: true
+            channel_type:
+              type: string
+              description:
+                The type of channel. Currently, Source supports chat (in-app messaging) and sms
+                channel types.
+              example: sms
+            from:
+              oneOf:
+                - $ref: "#/components/schemas/contact_point"
+              nullable: true
+              description:
+                Contact point from which the message was sent. For inbound messages from a member or
+                caregiver, this value is the contact point they used (for example, the member's
+                phone number). For outbound messages from the care team, this value is the channel's
+                contact point (for example, the practice's provisioned phone number).
+              example:
+                system: phone
+                value: "12125556789"
+            to:
+              oneOf:
+                - $ref: "#/components/schemas/contact_point"
+              nullable: true
+              description:
+                Contact point to which the message was sent. For inbound messages from a member or
+                caregiver, this value is the channel's contact point (for example, the practice's
+                provisioned phone number). For outbound messages sent to a member or caregiver, this
+                value is the contact point of the member or caregiver (for example, the member's
+                phone number).
+              example:
+                system: phone
+                value: "12125556789"
             text:
               type: string
               description: Plain text contents of the message.
@@ -14995,22 +15289,51 @@ components:
                   description: Expandable reference to a Member
                   example: mem_JAfPRRc59eh2YQ1aeL3D
               description: The person who sent this message.
+            status:
+              type: string
+              enum:
+                - pending
+                - sent
+                - failed
+              description:
+                The current status of the message. For messages sent via Source's in-app chat
+                feature, messages go directly to the 'sent' status. For all other channels, the
+                message is created in a 'pending' status and then transitions to the 'sent' status
+                upon successful sending, or the 'failed' status if an error occurs.
+              example: sent
             sent_at:
               type: string
               format: date-time
               description: The time at which this message was sent.
               example: 2021-05-13T16:33:00.000Z
+            direction:
+              type: string
+              enum:
+                - inbound
+                - outbound
+              description:
+                Inbound or outbound from the perspective of the care team. All messages sent by
+                members have an inbound direction. This field can be useful when displaying a thread
+                in a member experience, with messages from the care team on one side of the display
+                and messages from the member on the opposite side.
+              example: outbound
             redacted_at:
               type: string
               format: date-time
               nullable: true
               description: The time at which this message redacted.
-              example: 2021-05-13T16:33:00.000Z
+              example: null
           required:
+            - channel
+            - channel_type
+            - from
+            - to
             - text
             - attachments
             - sender
+            - status
             - sent_at
+            - direction
             - redacted_at
           description: Preview of the most recent text message in the thread.
         created_at:
@@ -15050,6 +15373,9 @@ components:
         - object
         - id
         - member
+        - channel
+        - channel_type
+        - last_remote_contact_point
         - assignee
         - status
         - subject
