--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3975,6 +3975,7 @@ paths:
                             An exit is a point in a form at which a responder may be directed to a
                             specific exit screen, identified by the `exit_screen_key`, based on
                             answers to previous questions referenced in the `conditional`.
+                        nullable: true
                         description: Array of exit points.
                     required:
                       - type
@@ -4042,7 +4043,7 @@ paths:
 
                       You can also configure exits within a form by adding an exit within your form
                       that references an exit screen key. You can create as many exit screens and
-                      exits as you need. A common example is when a responder answers question as
+                      exits as you need. A common example is when a responder answers questions as
                       part of an intake form that indicates they are not eligible for services. In
                       that case, you can create an exit screen and exit that indicate to the
                       responder they are ineligible and end their form response early.
@@ -12603,6 +12604,7 @@ components:
                     An exit is a point in a form at which a responder may be directed to a specific
                     exit screen, identified by the `exit_screen_key`, based on answers to previous
                     questions referenced in the `conditional`.
+                nullable: true
                 description: Array of exit points.
             required:
               - type
@@ -12667,7 +12669,7 @@ components:
 
               You can also configure exits within a form by adding an exit within your form that
               references an exit screen key. You can create as many exit screens and exits as you
-              need. A common example is when a responder answers question as part of an intake form
+              need. A common example is when a responder answers questions as part of an intake form
               that indicates they are not eligible for services. In that case, you can create an
               exit screen and exit that indicate to the responder they are ineligible and end their
               form response early.
@@ -14948,6 +14950,70 @@ components:
             A question type for recording a multiple choices among provided options. Using the
             'other' config, this question can optionally include one or more user-generated 'other'
             options.
+        - type: object
+          properties:
+            type:
+              type: string
+              default: question
+              enum:
+                - question
+              example: question
+            question_type:
+              type: string
+              default: yes_no
+              enum:
+                - yes_no
+              example: yes_no
+            key:
+              type: string
+              description:
+                Unique key of this question within the form. Used in responses and conditional
+                logic.
+              example: demographics_name
+            title:
+              type: string
+              description:
+                Display title of this question in the form, i.e. the question text itself.
+              example: How do you feel today?
+            description:
+              type: string
+              description:
+                An optional secondary text for this question, which will be displayed under the
+                title and can contain, for example, instructions on how to answer the question.
+            required:
+              type: boolean
+              description:
+                Whether a response to this question is required or optional. Questions that are
+                hidden by conditional rules are never required to have a response.
+            conditional:
+              oneOf:
+                - $ref: "#/components/schemas/CompoundConditional"
+              x-wrapped: true
+              description:
+                A conditional statement - if it evaluates to true, this question will be displayed,
+                if false the question will not be displayed and no response will be recorded for it.
+            labels:
+              type: object
+              properties:
+                yes:
+                  type: string
+                  nullable: true
+                  description: Display label for the 'yes' option.
+                  example: "True"
+                no:
+                  type: string
+                  nullable: true
+                  description: Display label for the 'no' option.
+                  example: "False"
+              nullable: true
+              description: Display labels for the yes or no options.
+          required:
+            - type
+            - question_type
+            - key
+            - title
+            - required
+          description: A question type for recording a discrete yes or no response.
       discriminator:
         propertyName: question_type
     queue:
