--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -11966,6 +11966,7 @@ components:
             - invalid_request_error
             - authentication_error
             - authorization_error
+            - unprocessable_request_error
           description: The type of error encountered.
         code:
           type: string
