Pushing v193 from API a2e9ec4fc472768e6c230e4b3801f413f29bdba9

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3247,6 +3247,15 @@ paths:
             description: Filter forms by archived or unarchived.
           required: false
           description: Filter forms by archived or unarchived.
+        - in: query
+          style: form
+          explode: true
+          name: published
+          schema:
+            type: boolean
+            description: Filter forms by published or unpublished.
+          required: false
+          description: Filter forms by published or unpublished.
       responses:
         default:
           description: Successful response.
