--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3434,9 +3434,7 @@ paths:
                     properties:
                       key:
                         type: string
-                      values:
-                        type: object
-                        additionalProperties: {}
+                      values: {}
                     required:
                       - key
                       - values
@@ -3721,9 +3719,7 @@ paths:
                     properties:
                       key:
                         type: string
-                      values:
-                        type: object
-                        additionalProperties: {}
+                      values: {}
                     required:
                       - key
                       - values
@@ -14193,9 +14189,7 @@ components:
             properties:
               item:
                 $ref: "#/components/schemas/Question"
-              response:
-                type: object
-                additionalProperties: {}
+              response: {}
             required:
               - item
               - response
