Pushing v195 from API 815fa9797d524d24fd185a4be80d5179e2661ccc

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -19948,6 +19948,9 @@ components:
         - group.created
         - group.updated
         - group.deleted
+        - license.created
+        - license.updated
+        - license.deleted
         - measurement.created
         - member.created
         - member.updated
